tests/snapshots/test_edit__field_alias_desc_is_rejected.snap
---
source: tests/edit_tests/path_cases/aliases.rs
expression: value
---
$ govctl work new Test Task
Created work item: gov/work/<DATE>-test-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work edit WI-<DATE>-001 desc --set A description
error[E0803]: Unknown work item field: desc (WI-<DATE>-001)
exit: 1

$ govctl work get WI-<DATE>-001 desc
error[E0803]: Unknown work item field: desc (WI-<DATE>-001)
exit: 1
