tests/snapshots/test_edit__field_alias_desc_not_global_on_adr.snap
---
source: tests/edit_tests/path_cases/aliases.rs
expression: value
---
$ govctl adr new Alias Scope
Created ADR: gov/adr/ADR-XXXX-alias-scope.toml
exit: 0

$ govctl adr edit ADR-0001 desc --set nope
error[E0803]: Unknown ADR field: desc (ADR-0001)
exit: 1
