tests/snapshots/test_edit__field_alias_under_storage_prefix_is_rejected.snap
---
source: tests/edit_tests/path_cases/aliases.rs
expression: value
---
$ govctl work new Test Task
Created work item: gov/work/<DATE>-test-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work edit WI-<DATE>-001 content.desc --set Legacy-prefixed description
error[E0803]: Unknown work item field: content.desc (WI-<DATE>-001)
exit: 1

$ govctl work get WI-<DATE>-001 description
Describe the work to be done.
What is the goal? What are the acceptance criteria?
exit: 0
