tests/snapshots/test_edit__remove_indexed_path_conflict.snap
---
source: tests/edit_tests/path_cases/nested_adr.rs
expression: value
---
$ govctl adr new Conflict Test
Created ADR: gov/adr/ADR-XXXX-conflict-test.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Opt1
Added 'Opt1' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].cons --add Bad
Added 'Bad' to ADR-0001.alternatives[0].cons
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].cons[0] --remove Bad
error[E0818]: Cannot combine an indexed path with a value, --regex, or --all (ADR-0001)
exit: 1
