tests/snapshots/test_edit__rfc_add_ref.snap
---
source: tests/test_edit.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc add RFC-0001 refs ADR-0001
error: unrecognized subcommand 'add'

Usage: govctl rfc [OPTIONS] <COMMAND>

For more information, try '--help'.
exit: 2

$ govctl rfc get RFC-0001 refs

exit: 0
