tests/snapshots/test_edit__rfc_get_nonexistent.snap
---
source: tests/test_edit.rs
assertion_line: 181
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc get RFC-9999 title
error[E0102]: RFC not found: RFC-9999 (gov/rfc)
exit: 1
